[package]
name = "halfmoon"
version = "0.1.0"
edition = "2024"

[dependencies]
libmoon = { path = "../libmoon" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
tui-widget-list = "0.13.2"
env_logger = "0.11.8"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tui-textarea = "0.7.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
